@@ -1,3 +1,7 @@
+2010-04-09  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (.Source): Provide document names.
+
 2010-04-07  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/meta.R (`content_or_meta`): Utility function.
